// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Line component should render 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 1rem;
  width: 100%;
}

<mark
  className="c0 ui-kit.Placeholder.Line custom-placeholder"
  width="100%"
/>
`;

exports[`the Line component should render showLoadingAnimation 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 1rem;
  width: 100%;
}

<mark
  className="c0 show-loading-animation ui-kit.Placeholder.Line custom-placeholder"
  width="100%"
/>
`;

exports[`the Line component should render with a custom width 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 1rem;
  width: 50%;
}

<mark
  className="c0 ui-kit.Placeholder.Line custom-placeholder"
  width="50%"
/>
`;
